# rs-matter-data-model

./: Cargo.toml
data-model/: Cargo.toml
data-model/src/: endpoint_composition.rs  lib.rs
idl-parser/: Cargo.toml
idl-parser/examples/: file_parser.rs
idl-parser/src/: lib.rs  test_input1.matter
matter-data-model-codegen/: Cargo.toml
matter-data-model-codegen/src/: lib.rs
matter-idl-parser/benches/: client-clusters-criterion.rs  client-clusters.rs
matter-idl-parser/src/: lib.rs
